src/css/style.css
@import url(http://weloveiconfonts.com/api/?family=iconicfill);


html, body {
	height: 100%;
	margin: 0;
	padding: 0;
}


/*bootstrap*/

.container {
    max-width: 480px !important;
    max-height: 93% !important;
    overflow: auto !important;
    overflow-x: hidden !important;
}


/*fonts*/

/* iconicfill */
[class*="iconicfill-"]:before {
  font-family: 'IconicFill', sans-serif;
}


#map {
	height: 100%;
	position: relative;
	z-index: 1;
}

#filter {
	position: absolute;
	top: 44px;
	left: -5px;
	z-index: 99;
    width: 480;
}

.filter-box {
	width: 250px;
	height: 32px;
}


/*Slide in Menu*/

.filter-menu {
	z-index: 98;
    background-color: orange;
    top: 0;
    width: 480px !important;
    height: 100%;
    position: absolute;
    /* This trasform moves the drawer off canvas. */
    -webkit-transform: translate(-480px, 0);
    transform: translate(-480px, 0);
    /* Optionally, we animate the drawer. */
    transition: transform 0.4s ease;
}

.filter-menu.is-active {
	-webkit-transform: translate(0, 0);
    transform: translate(0, 0);
}

.close-button {
	z-index: 100;
    position: relative;
    float: right;
    padding: 0.4em;
    color: black;
    font-size: 2em;
    cursor: hand;
    cursor: pointer; /*same as hand in FireFox*/
}

.filler {
    width: 480px;
    height: 90px;
}


/*Search Results*/

.results {
    max-height: 100%;
    max-width: 480px !important;
    overflow: auto;
    overflow-x: hidden !important;
}

.searchResult {
    width: 440px;
    margin: 10px;
    cursor: hand;
    cursor: pointer; /*same as hand in FireFox*/
}

.locationName {
    font-size: 16px;
    font-weight: bold;
}

.address, .category {
    font-size: 12px;
    font-style: italic;
    padding-left: 50px !important;
}


/*Info Windows*/

#content {
    font-size: 14px;
}

#placeImg {
    float: left;
    padding-right: 5px;
}

#yelpLogo {
    float: right;
}

